# chess-player-analyser

./: .dockerignore  .env  .gitignore  DEPLOY.md  Dockerfile  PROJECT_DOC.md  README.md  cookies.txt  deploy.sh  firebase_notes.md  gameplay_rules.md  neo4j_notes.md  nginx.conf.example  pyproject.toml  requirements.txt  systemd.service.example
.run/: Run App.run.xml
app/: chesscom.py  eco.py  games.py  main.py  metrics.py  neo4j_store.py  parser.py  players.py  run_groups.py  self_play.py  self_play_metrics.py  self_play_worker.py
app/rl/: __init__.py  __main__.py  config.py  dataset.py  double_dqn.py  dqn_train.py  encoding.py  evaluate.py  gym_env.py  model.py  presets.py  replay_buffer.py  sb3_train.py  self_play_rl.py  service.py  training.py
app/templates/: game.html  games.html  index.html  play.html  rl.html  self_play.html  self_play_analysis.html  self_play_player.html  self_play_players.html  self_play_termination.html  self_play_terminations.html  user.html
docs/: PROJECT_DOC.md  RL.md  gameplay_rules.md  neo4j_notes.md
engine/: Cargo.toml  README.md  pyproject.toml
engine/src/: eval.rs  lib.rs  search.rs
