[project]
name = "chess-player-analyser"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "requests==2.32.3",
    "pandas==2.3.3",
    "numpy==2.5.1",
    "gymnasium>=1.0,<2",
    "stable-baselines3>=2.8,<3",
    "sb3-contrib>=2.8,<3",
    "python-chess==1.999",
    "plotly==5.24.1",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "neo4j==5.28.1",
    "pandas-stubs~=2.3.3",
    "python-dotenv==1.0.1",
]
